@@ -26,5 +26,9 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    App\Listener\ControllerAuthorizationListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.request }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
